# ai-agent-setting

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.json
cmd/: agent-config-init
config/claude/: settings.json
src/agent_config_init/: __main__.py  cli.py  config.py  merge.py
